dialer pad changes

--- a/app/src/main/res/layout/activity_dialer.xml
+++ b/app/src/main/res/layout/activity_dialer.xml
@@ -48,9 +48,8 @@
         android:id="@+id/included_dialer"
         layout="@layout/dialer_number_layout"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/recy_list_contacts" />
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
