--- a/app/src/main/res/layout/fragment_call_history.xml
+++ b/app/src/main/res/layout/fragment_call_history.xml
@@ -9,30 +9,67 @@
         android:layout_height="match_parent"
         android:background="@color/white">
 
+        <androidx.cardview.widget.CardView
+            android:id="@+id/layout_search"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            app:cardCornerRadius="10dp"
+            android:layout_margin="10dp"
+            android:elevation="5dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+                <ImageView
+                    android:src="@drawable/ic_search"
+                    android:layout_width="24dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_gravity="center"
+                    android:layout_height="24dp"/>
+                <TextView
+                    android:text="Search your contacts and more..."
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="5dp"
+                    android:layout_height="wrap_content"/>
+                <ImageView
+                    android:src="@drawable/ic_setting"
+                    android:layout_width="24dp"
+                    android:rotation="270"
+                    android:layout_gravity="center"
+
+                    android:layout_height="24dp"/>
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tab_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
-            app:tabInlineLabel="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/layout_search"
             app:tabIconTintMode="multiply"
-
-            app:layout_constraintTop_toTopOf="parent"
             app:tabIndicatorColor="@color/orange"
+            app:tabInlineLabel="true"
             app:tabSelectedTextColor="@color/orange"
             app:tabTextColor="@color/black" />
+
         <androidx.cardview.widget.CardView
             android:id="@+id/card_dialer_bt"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_alignParentBottom="true"
             android:layout_centerInParent="true"
-            android:elevation="10dp"
-            android:clickable="true"
             android:layout_marginBottom="80dp"
+            android:clickable="true"
+            android:elevation="10dp"
             app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="70dp"
             app:cardElevation="10dp"
