--- a/app/src/main/res/layout/fragment_contacts.xml
+++ b/app/src/main/res/layout/fragment_contacts.xml
@@ -15,6 +15,7 @@
         android:orientation="vertical"
         android:padding="5dp">
         <LinearLayout
+            android:visibility="gone"
             android:id="@+id/layout_toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
