--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -24,12 +24,11 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/img_profile"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:padding="5dp"
+                android:id="@+id/img_back"
+                android:layout_width="34dp"
+                android:layout_height="34dp"
                 android:layout_gravity="center_vertical"
-                android:src="@drawable/userprofile" />
+                android:src="@drawable/ic_back" />
 
             <EditText
                 android:id="@+id/et_search"
@@ -40,10 +39,11 @@
                 android:layout_marginEnd="10dp"
                 android:layout_weight="1"
                 android:maxLines="1"
+                android:hint="Search your contacts and more..."
                 android:singleLine="true"
-                android:fontFamily="sans-serif-black"
+                android:textSize="14sp"
+                android:fontFamily="sans-serif-medium"
                 android:background="@android:color/transparent"
-                android:hint="@string/app_name"
                 android:lines="1" />
 
             <ImageView
@@ -51,7 +51,6 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:rotation="270"
-
                 android:src="@drawable/ic_setting" />
         </LinearLayout>
 
