--- a/app/src/main/res/layout/fragment_call_history.xml
+++ b/app/src/main/res/layout/fragment_call_history.xml
@@ -13,11 +13,10 @@
             android:id="@+id/layout_search"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_margin="15dp"
+            android:layout_margin="10dp"
             android:elevation="5dp"
-
             app:cardElevation="20dp"
-            app:contentPadding="10dp"
+            app:contentPadding="5dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -27,23 +26,29 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
+                    android:id="@+id/img_profile"
+                    android:layout_width="30dp"
+                    android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:layout_marginStart="10dp"
-                    android:src="@drawable/ic_search" />
+                    android:src="@drawable/userprofile" />
 
                 <TextView
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_gravity="center"
+                    android:gravity="center_vertical"
                     android:layout_marginStart="5dp"
                     android:layout_weight="1"
-                    android:text="Search your contacts and more..." />
+                    android:text="@string/app_name"
+                    android:textSize="20sp"
+                    android:textColor="@color/orange"
+                    android:fontFamily="sans-serif-black"
+                     />
 
                 <ImageView
                     android:layout_width="24dp"
-                    android:layout_height="24dp"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:rotation="270"
 
@@ -54,6 +59,7 @@
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tab_layout"
+            android:layout_margin="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
