--- a/app/src/main/res/layout/fragment_call_history.xml
+++ b/app/src/main/res/layout/fragment_call_history.xml
@@ -37,7 +37,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
-                    android:gravity="center_vertical"
+                    android:gravity="center"
                     android:layout_marginStart="5dp"
                     android:layout_weight="1"
                     android:text="@string/app_name"
@@ -50,8 +50,12 @@
                     android:layout_width="24dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:src="@drawable/ic_search" />
+                <ImageView
+                    android:layout_width="24dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:rotation="270"
-
                     android:src="@drawable/ic_setting" />
             </LinearLayout>
 
